Synthetic LDA/SynLDA/logs/slurm-20833.out
/data/happythgus/LDA/DC
/data/opt/anaconda3/bin/python
moana-r3
Traceback (most recent call last):
  File "/data/happythgus/LDA/DC/main.py", line 9, in <module>
    from utils import get_loops, get_dataset, get_network, get_eval_pool, evaluate_synset, get_daparam, match_loss, get_time, TensorDataset, epoch, DiffAugment, augment, ParamDiffAug, LDALoss
  File "/data/happythgus/LDA/DC/utils.py", line 18
    num_features = len(X[0])
    ^
SyntaxError: invalid syntax
